stylesheets/notification-banners.scss
.notification-banners--above-site-header,
.notification-banners--below-site-header,
.notification-banners--above-main-container,
.notification-banners--top-notices {
  margin: 0;

  .notification-banner {
    background: var(--tertiary-low);
    color: var(--primary);
    z-index: 2;

    &__wrapper {
      padding: 0;
    }

    &__close {
      float: right;
      display: flex;
    }

    &__header {
      margin-bottom: 0;
      display: flex;
      align-items: center;
      gap: 0.5rem;
    }

    &__content {
      padding: 0.5rem 1.5rem 0.25rem;
      min-height: 1.5rem;
    }
  }

  &.splide {
    .notification-banner {
      margin: 0;

      .notification-banner__close {
        display: none;
      }
    }
  }
}

.notification-banners--top-notices {
  margin: 1rem 0;

  .notification-banner {
    margin: 1rem 0;

    &__content {
      padding: 1rem;
    }
  }
}

